# correct-shaped-lies

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: thresholds.yaml
intent-controller/: go.mod
intent-controller/cmd/server/: main.go
intent-controller/internal/controller/: controller.go  controller_test.go  http.go
scripts/: make_figures.py  run_sweep.py  smoke_episode.py
src/csl/: __init__.py  seeding.py
src/csl/composition/: __init__.py  cross_stage_consistency.py  honest_reference.py  layer.py  passed_too_easily.py  retry_score_anomaly.py
src/csl/controller/: __init__.py  client.py  episode.py  harness.py  ml_service.py
src/csl/domain/: __init__.py  base.py  registry.py
src/csl/domain/code_generation/: __init__.py  backdoor.py  compare.py  correctness.py  domain.py  evaluators.py  held_ground_truth.py  sandbox.py  tasks.py
src/csl/evals/: __init__.py  base.py  correctness.py  stack.py
src/csl/experiment/: __init__.py  artifacts.py  config.py  metrics.py  runner.py
src/csl/producer/: __init__.py  agent.py  base.py  context.py  injection.py  optimize.py  scripted.py  signatures.py
src/csl/trajectory/: __init__.py  record.py  schema.py
tests/: test_adversary_metric.py  test_boundary_seeding.py  test_code_domain_groundtruth.py  test_composition.py  test_determinism.py  test_dspy_producer.py  test_episode_integration.py  test_metrics.py  test_reproducibility.py  test_review_fixes.py  test_scripted_producer.py  test_tier_ordering.py
