[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correct-shaped-lies"
version = "0.0.1"
description = "The detection limit of lifecycle oversight: a graded adversarial red-team of an all_passed()-gated controller."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavier deps only needed once the model-driven harness comes online (W4+).
producer = [
    "dspy-ai>=2.5",
    "anthropic>=0.40",
]
service = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
figures = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
